--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Text-to-Speech App</h1>
+    <h1>Text-to-Speech Application</h1>
     <textarea id="textInput" placeholder="Enter text here..."></textarea>
     <button onclick="convertText()">Convert to Speech</button>
     <p id="status"></p>
@@ -17,3 +17,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
